feat:Added support for art template/plug

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "npm run start-socket-serve && karma start && npm run stop-socket-serve",
-    "start-socket-serve": "pm2 restart ./test/mockServer.js",
+    "start-socket-serve": "pm2 start ./test/mockServer.js",
     "stop-socket-serve": "pm2 stop ./test/mockServer.js",
     "build": "npx rollup -c rollup.config.js",
     "tsc": "tsc"
@@ -30,13 +30,14 @@
     "ws",
     "websocket-client"
   ],
-  "author": "",
+  "author": "dc2002007@gmail.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/curry-trooper/tank-websocket.js/issues"
   },
   "homepage": "https://github.com/curry-trooper/tank-websocket.js#readme",
   "devDependencies": {
+    "@babel/core": "^7.21.4",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -46,11 +47,9 @@
     "karma-chrome-launcher": "^3.1.1",
     "karma-mocha": "^2.0.1",
     "mocha": "^10.2.0",
-    "patch-package": "^6.5.1",
     "pm2": "^5.3.0",
     "rollup": "^3.20.2",
-    "ws": "^8.13.0",
-    "@babel/core": "^7.21.4"
+    "ws": "^8.13.0"
   },
   "dependencies": {
   }
